<resources>
    <string name="app_name">TODO</string>
    <string name="pick_a_color">Pick a Color</string>
    <string name="title">Title</string>
    <string name="close">Close</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="remind_me">Remind me</string>
    <string name="save">Save</string>
    <string name="start_to_end"><![CDATA[--->]]></string>
</resources>
